<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContaActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tlBar"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgConta"
        android:layout_width="115dp"
        android:layout_height="102dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:src="@mipmap/icprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlBar" />

    <EditText
        android:id="@+id/etxNome"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txtNome"
        android:inputType="textPersonName"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgConta" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="375dp"
        android:layout_height="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlBar" />



    <EditText
        android:id="@+id/etxPeso"
        android:layout_width="166dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/etxPeso"
        android:inputType="number"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxNome" />

    <EditText
        android:id="@+id/etxAltura"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Altura"
        android:inputType="number"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etxPeso"
        app:layout_constraintTop_toBottomOf="@+id/etxNome" />

    <TextView
        android:id="@+id/txtAdd"
        android:layout_width="95dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtAdd"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxAltura" />

    <ScrollView
        android:layout_width="812dp"
        android:layout_height="240dp"
        android:layout_marginStart="376dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="48dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnConfirma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAdd"
            app:layout_constraintVertical_bias="0.0">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/grPeso"
                android:layout_width="333dp"
                android:layout_height="160dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/btnConfirma"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent">

            </com.github.mikephil.charting.charts.LineChart>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/grPie"
                android:layout_width="match_parent"
                android:layout_height="172dp">

            </com.github.mikephil.charting.charts.PieChart>

            <TextView
                android:id="@+id/txtDica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='""'
                android:textColor="@color/branco" />

            <Button
                android:id="@+id/btnConfirma"
                android:layout_width="327dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/btnConfirma"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>
    <EditText
        android:id="@+id/etxData"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Dia"
        android:inputType="number"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toStartOf="@+id/txtAdd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxPeso" />

    <ImageView
        android:id="@+id/btnVoltar"
        android:layout_width="38dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

</android.support.constraint.ConstraintLayout>